# CORE-32

./: README.md  pyproject.toml
docs/: architecture.md  repository-structure.md  research-map.md
examples/: basic_run.py
scripts/: core_verify.py
src/core32/: __init__.py  cli.py  cnlt.py  constants.py  encoding.py  log.py  payloads.py  primitives.py  registry.py  schedule.py  supervisor.py
src/core32_rubic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_primitives.py  test_schedule.py  test_supervisor.py
