[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core32-rubic"
version = "0.1.0"
description = "Python-first repository stack for the CORE-32 / RUBIC reversible computation architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Christopher Gordon Phillips" },
  { name = "OpenAI ChatGPT" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
core32 = "core32.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
